# xsens_mtw_wrapper

./: CMakeLists.txt  package.xml
include/xsens_mtw/: MtwCallback.h  Synchronizer.h  WirelessMasterCallback.h  Wrapper.h
launch/: hiros_xsens_mtw_wrapper_default.xml  launch_xsens.py
src/: Wrapper.cpp  main.cpp
