<?xml version="1.0"?>
<package format="2">
  <name>hiros_xsens_mtw_wrapper</name>
  <version>0.1.0</version>
  <description>Hi-ROS mantained xsens_mtw_wrapper package for ROS2</description>
  <maintainer email="hamounheidarshenas@gmail.com">Hamoun Heidarshenas</maintainer>  
  <license>TODO</license>

  <url type="website">https://gitlab.com/hamounTUK</url>
  




  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- <build_depend>cmake_modules</build_depend> -->
  <!-- <build_depend>message_generation</build_depend> -->
  <!-- <build_export_depend>message_runtime</build_export_depend> -->
  <!-- <exec_depend>message_runtime</exec_depend> -->


</package>
